[gd_scene load_steps=9 format=2]

[ext_resource path="res://creatures/player/abilities/bite_action.gd" type="Script" id=1]
[ext_resource path="res://creatures/player/abilities/bite-swing_5.png" type="Texture" id=2]
[ext_resource path="res://Audio/SFX/sfx_sounds_impact7.wav" type="AudioStream" id=3]
[ext_resource path="res://particle effects/damage.tscn" type="PackedScene" id=4]
[ext_resource path="res://Audio/SFX/sfx_sounds_interaction9.wav" type="AudioStream" id=5]

[sub_resource type="CircleShape2D" id=1]
radius = 33.0

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 4 ]
}

[sub_resource type="Animation" id=3]
resource_name = "swing"
length = 0.2
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4 ]
}

[node name="Area2D" type="Area2D"]
collision_layer = 0
collision_mask = 3
monitoring = false
monitorable = false
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 37, 0 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 38.9426, -3.73333 )
texture = ExtResource( 2 )
hframes = 5
frame = 4

[node name="Timer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="DamageParticles" parent="." instance=ExtResource( 4 )]
emitting = false
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 2 )
anims/swing = SubResource( 3 )

[node name="AudioSwing" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -25.0

[node name="AudioImpact" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
volume_db = -10.0
max_distance = 500.0

[connection signal="body_entered" from="." to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
